visualized/service.yml
apiVersion: v1
kind: Service
metadata:
  name: visualized-service
spec:
  selector:
    app: visualized
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
